<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background">

    <!-- TopAppBar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_plan_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/plan_setup_title"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Daily new words -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_daily_new"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_lg"
        android:layout_marginTop="@dimen/spacing_xl"
        android:layout_marginEnd="@dimen/spacing_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_plan_setup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_lg">

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_setup_daily_new_hint" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_daily_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:valueFrom="5"
                android:valueTo="100"
                android:stepSize="5" />

            <TextView
                android:id="@+id/tv_daily_new_value"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="20"
                android:textColor="@color/md_theme_primary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Target days -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_target_days"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_lg"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_daily_new">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_lg">

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_setup_target_days_hint" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_target_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:valueFrom="7"
                android:valueTo="365"
                android:stepSize="1" />

            <TextView
                android:id="@+id/tv_target_days_value"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="30"
                android:textColor="@color/md_theme_primary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Start learning button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_learning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_lg"
        android:layout_marginEnd="@dimen/spacing_lg"
        android:layout_marginBottom="@dimen/spacing_xl"
        android:text="@string/plan_setup_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
